feat: add emailServiceTest class and refactor all the test classes to adjust with methods